Fix dialog overflow

--- a/src/resources/stylesheets/ui/dialogs.less
+++ b/src/resources/stylesheets/ui/dialogs.less
@@ -6,6 +6,7 @@
     right: 0px;
     bottom: 0px;
     background: rgba(0, 0, 0, 0.5);
+    overflow: auto;
 }
 
 .dialog {
